@@ -1,3 +1,7 @@
+2006-02-03  Alan Modra  <amodra@bigpond.net.au>
+
+	* gcc.target/powerpc/pr25960.c: New test.
+
 2006-01-31  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/25342
