@@ -1,3 +1,8 @@
+2006-02-03  Alan Modra  <amodra@bigpond.net.au>
+
+	PR target/25960
+	* config/rs6000/darwin-ldouble.c (__gcc_qadd): Preserve -0.0 result.
+
 2006-02-03  Andreas Krebbel  <krebbel1@de.ibm.com>
             Ulrich Weigand  <uweigand@de.ibm.com>
 
